java 21 updates, code improvements